add links internally

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
             </p>
         </header>
         <div class="flex justify-center space-x-4 mb-8">
-            <button class="btn btn-outline">UCAT</button>
+            <button class="btn btn-outline" onclick="location.href='paragraph_word_highlighter.html'">UCAT</button>
             <button class="btn btn-outline">Interviews</button>
         </div>
         <div class="max-w-md mx-auto">
