--- a/src/paragraph_word_highlighter.html
+++ b/src/paragraph_word_highlighter.html
@@ -29,7 +29,8 @@
   <option value="4">4</option>
   <!-- Add more options as needed -->
 </select>
-<button onclick="highlightWords()">Next</button>
+<button onclick="highlightWords()">Play</button>
+<button onclick="location.href='paragraph_highlighter_custom.html'">Try Your Own Paragraph</button>
 
 <script>
 function highlightWords() {
